--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
-body {
+body,
+html {
   font-family: sans-serif;
 }
 
@@ -15,7 +16,16 @@ nav a {
   margin: 1em;
 }
 
-form div {
-  margin: 1em;
-  display: inline-block;
+.center {
+  height: 200px;
+  position: relative;
+}
+
+.center {
+  margin: 0;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
