--- a/public/style.css
+++ b/public/style.css
@@ -64,7 +64,7 @@ label {
 .home-container {
   display: flex;
   justify-content: center;
-  margin-top: 10%;
+  margin-top: 3%;
 }
 
 .vl {
@@ -82,6 +82,7 @@ label {
   margin-left: 0%;
   margin-right: 15%;
   width: 50%;
+  text-align: center;
 }
 
 .single-stock {
@@ -89,4 +90,9 @@ label {
   justify-content: space-between;
   margin: 10%;
   font-size: 175%;
+}
+
+/* Purchase style */
+
+.purchase-container {
 }
